--- a/package.json
+++ b/package.json
@@ -11,40 +11,41 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@fontsource/fira-mono": "^5.0.13",
+		"@fontsource/fira-mono": "^5.1.0",
 		"@neoconfetti/svelte": "^2.2.1",
-		"@sveltejs/adapter-auto": "^3.2.4",
-		"@sveltejs/kit": "^2.5.22",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next",
+		"@sveltejs/adapter-auto": "^3.2.5",
+		"@sveltejs/kit": "^2.5.28",
+		"@sveltejs/vite-plugin-svelte": "4.0.0-next.7",
 		"@tailwindcss/postcss": "4.0.0-alpha.19",
 		"@tailwindcss/vite": "4.0.0-alpha.19",
-		"@types/eslint": "^9.6.0",
-		"@unocss/extractor-svelte": "^0.62.2",
-		"@unocss/reset": "^0.62.1",
-		"eslint": "^9.9.0",
+		"@types/eslint": "^9.6.1",
+		"@unocss/extractor-svelte": "^0.62.4",
+		"@unocss/reset": "^0.62.4",
+		"eslint": "^9.11.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.43.0",
+		"eslint-plugin-svelte": "^2.44.0",
 		"globals": "^15.9.0",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.6",
 		"proper-tags": "^2.0.2",
-		"svelte": "^5.0.0-next",
-		"svelte-check": "^3.8.5",
-		"typescript": "^5.5.4",
-		"typescript-eslint": "^8.1.0",
-		"unocss": "^0.62.1",
-		"vite": "^5.4.0"
+		"svelte": "5.0.0-next.257",
+		"svelte-check": "^4.0.2",
+		"typescript": "^5.6.2",
+		"typescript-eslint": "^8.6.0",
+		"unocss": "^0.62.4",
+		"vite": "^5.4.7"
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource-variable/inter": "^5.0.21",
-		"@fontsource/inter": "^5.0.21",
+		"@fontsource-variable/inter": "^5.1.0",
+		"@fontsource/inter": "^5.1.0",
 		"@iconify/svelte": "^4.0.2",
 		"@speed-highlight/core": "^1.2.6",
 		"@types/prismjs": "^1.26.4",
 		"highlight.js": "^11.10.0",
 		"marked": "^14.1.2",
 		"prismjs": "^1.29.0",
-		"radash": "^12.1.0"
+		"radash": "^12.1.0",
+		"yaml": "^2.5.1"
 	}
 }
