add resume page

--- a/package.json
+++ b/package.json
@@ -41,8 +41,12 @@
 		"@fontsource/inter": "^5.1.0",
 		"@iconify/svelte": "^4.0.2",
 		"@speed-highlight/core": "^1.2.6",
+		"@types/markdown-it": "^14.1.2",
+		"@types/markdown-it-attrs": "^4.1.3",
 		"@types/prismjs": "^1.26.4",
 		"highlight.js": "^11.10.0",
+		"markdown-it": "^14.1.0",
+		"markdown-it-attrs": "^4.2.0",
 		"marked": "^14.1.2",
 		"prismjs": "^1.29.0",
 		"radash": "^12.1.0",
