--- a/package.json
+++ b/package.json
@@ -42,9 +42,12 @@
 		"@types/markdown-it-attrs": "^4.1.3",
 		"@types/prismjs": "^1.26.4",
 		"highlight.js": "^11.10.0",
+		"iconify-icon": "^2.1.0",
 		"markdown-it": "^14.1.0",
 		"markdown-it-attrs": "^4.2.0",
 		"marked": "^14.1.2",
+		"open-props": "^1.7.6",
+		"pocketbase": "^0.21.5",
 		"prismjs": "^1.29.0",
 		"radash": "^12.1.0",
 		"yaml": "^2.5.1"
