--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"db": "./db/pocketbase serve"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^5.1.0",
@@ -41,6 +42,7 @@
 		"@types/markdown-it": "^14.1.2",
 		"@types/markdown-it-attrs": "^4.1.3",
 		"@types/prismjs": "^1.26.4",
+		"embla-carousel-svelte": "^8.3.0",
 		"highlight.js": "^11.10.0",
 		"iconify-icon": "^2.1.0",
 		"markdown-it": "^14.1.0",
