update resume and rocks page

--- a/src/routes/recipes/data/hot-pocket.yaml
+++ b/src/routes/recipes/data/hot-pocket.yaml
@@ -1,10 +1,11 @@
 name: Hot Pockets
 ingredients:
-  - 400g flour
-  - 2 tsp baking powder (10 grams)
-  - 420 g yoghurt
-  - condiments (salt, pepper, onions powder, garlic powder, etc.)
-  - filling (egg, bacon, ground beef, cheese, etc.)
+  For the dough:
+    - 400g flour
+    - 2 tsp baking powder (10 grams)
+    - 420 g yoghurt
+    - condiments (salt, pepper, onions powder, garlic powder, etc.)
+    - filling (egg, bacon, ground beef, cheese, etc.)
 steps:
   - Mix flour, baking powder, and condiments, then add yoghurt
   - Turn into a dough
