--- a/package.json
+++ b/package.json
@@ -43,17 +43,24 @@
 		"@speed-highlight/core": "^1.2.6",
 		"@types/markdown-it": "^14.1.2",
 		"@types/markdown-it-attrs": "^4.1.3",
+		"@types/markdown-it-footnote": "^3.0.4",
 		"@types/prismjs": "^1.26.4",
 		"embla-carousel-svelte": "^8.3.0",
 		"highlight.js": "^11.10.0",
 		"iconify-icon": "^2.1.0",
 		"markdown-it": "^14.1.0",
 		"markdown-it-attrs": "^4.2.0",
+		"markdown-it-footnote": "^4.0.0",
 		"marked": "^14.1.2",
+		"mdsvex": "^0.12.3",
 		"open-props": "^1.7.6",
 		"pocketbase": "^0.21.5",
 		"prismjs": "^1.29.0",
 		"radash": "^12.1.0",
+		"remark-attr": "^0.11.1",
+		"remark-footnotes": "^2.0.0",
+		"remark-gfm": "^4.0.0",
+		"remark-toc": "^9.0.0",
 		"yaml": "^2.5.1"
 	}
 }
