--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"@svelte-put/inline-svg": "4.0.0-next.4",
 		"@sveltejs/adapter-auto": "^3.2.5",
 		"@sveltejs/kit": "^2.6.1",
-		"@sveltejs/vite-plugin-svelte": "4.0.0-next.7",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^9.6.1",
 		"@unocss/extractor-svelte": "^0.63.2",
 		"@unocss/reset": "^0.63.2",
@@ -27,7 +27,7 @@
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
 		"proper-tags": "^2.0.2",
-		"svelte": "5.0.0-next.257",
+		"svelte": "^5",
 		"svelte-check": "^4.0.4",
 		"typescript": "^5.6.2",
 		"typescript-eslint": "^8.8.0",
@@ -41,10 +41,14 @@
 		"@iconify/svelte": "^4.0.2",
 		"@poppanator/sveltekit-svg": "^4.2.1",
 		"@speed-highlight/core": "^1.2.6",
+		"@tailwindcss/postcss": "4.0.0-alpha.31",
+		"@tailwindcss/vite": "4.0.0-alpha.31",
+		"@types/chroma-js": "^2.4.4",
 		"@types/markdown-it": "^14.1.2",
 		"@types/markdown-it-attrs": "^4.1.3",
 		"@types/markdown-it-footnote": "^3.0.4",
 		"@types/prismjs": "^1.26.4",
+		"chroma-js": "^3.1.2",
 		"embla-carousel-svelte": "^8.3.0",
 		"highlight.js": "^11.10.0",
 		"iconify-icon": "^2.1.0",
@@ -62,6 +66,8 @@
 		"remark-footnotes": "^2.0.0",
 		"remark-gfm": "^4.0.0",
 		"remark-toc": "^9.0.0",
+		"tailwindcss": "4.0.0-alpha.31",
+		"temporal-polyfill": "^0.2.5",
 		"yaml": "^2.5.1"
 	}
 }
