--- a/package.json
+++ b/package.json
@@ -13,33 +13,33 @@
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^5.1.0",
-		"@svelte-put/inline-svg": "4.0.0-next.4",
-		"@sveltejs/adapter-auto": "^3.2.5",
-		"@sveltejs/kit": "^2.6.1",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@svelte-put/inline-svg": "4.0.0",
+		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/kit": "^2.8.1",
+		"@sveltejs/vite-plugin-svelte": "^4.0.1",
 		"@types/eslint": "^9.6.1",
-		"@unocss/extractor-svelte": "^0.63.2",
-		"@unocss/reset": "^0.63.2",
-		"eslint": "^9.11.1",
+		"@unocss/extractor-svelte": "^0.64.1",
+		"@unocss/reset": "^0.64.1",
+		"eslint": "^9.15.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.44.1",
-		"globals": "^15.10.0",
+		"eslint-plugin-svelte": "^2.46.0",
+		"globals": "^15.12.0",
 		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.7",
+		"prettier-plugin-svelte": "^3.2.8",
 		"proper-tags": "^2.0.2",
-		"svelte": "^5",
-		"svelte-check": "^4.0.4",
-		"typescript": "^5.6.2",
-		"typescript-eslint": "^8.8.0",
-		"unocss": "^0.63.2",
-		"vite": "^5.4.8"
+		"svelte": "^5.2.3",
+		"svelte-check": "^4.0.9",
+		"typescript": "^5.6.3",
+		"typescript-eslint": "^8.15.0",
+		"unocss": "^0.64.1",
+		"vite": "^5.4.11"
 	},
 	"type": "module",
 	"dependencies": {
 		"@fontsource-variable/inter": "^5.1.0",
 		"@fontsource/inter": "^5.1.0",
 		"@iconify/svelte": "^4.0.2",
-		"@poppanator/sveltekit-svg": "^4.2.1",
+		"@poppanator/sveltekit-svg": "^5.0.0",
 		"@speed-highlight/core": "^1.2.6",
 		"@tailwindcss/postcss": "4.0.0-alpha.31",
 		"@tailwindcss/vite": "4.0.0-alpha.31",
@@ -47,17 +47,17 @@
 		"@types/markdown-it": "^14.1.2",
 		"@types/markdown-it-attrs": "^4.1.3",
 		"@types/markdown-it-footnote": "^3.0.4",
-		"@types/prismjs": "^1.26.4",
+		"@types/prismjs": "^1.26.5",
 		"chroma-js": "^3.1.2",
-		"embla-carousel-svelte": "^8.3.0",
+		"embla-carousel-svelte": "^8.4.0",
 		"highlight.js": "^11.10.0",
 		"iconify-icon": "^2.1.0",
 		"markdown-it": "^14.1.0",
 		"markdown-it-attrs": "^4.2.0",
 		"markdown-it-footnote": "^4.0.0",
-		"marked": "^14.1.2",
+		"marked": "^15.0.1",
 		"mdsvex": "^0.12.3",
-		"open-props": "^1.7.6",
+		"open-props": "^1.7.7",
 		"pdf-lib": "^1.17.1",
 		"pocketbase": "^0.21.5",
 		"prismjs": "^1.29.0",
@@ -68,6 +68,6 @@
 		"remark-toc": "^9.0.0",
 		"tailwindcss": "4.0.0-alpha.31",
 		"temporal-polyfill": "^0.2.5",
-		"yaml": "^2.5.1"
+		"yaml": "^2.6.0"
 	}
 }
