--- a/package.json
+++ b/package.json
@@ -15,58 +15,56 @@
 		"@fontsource/fira-mono": "^5.1.0",
 		"@svelte-put/inline-svg": "4.0.0",
 		"@sveltejs/adapter-auto": "^3.3.1",
-		"@sveltejs/kit": "^2.8.5",
-		"@sveltejs/vite-plugin-svelte": "^5.0.1",
+		"@sveltejs/kit": "^2.13.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@types/eslint": "^9.6.1",
-		"@unocss/extractor-svelte": "^0.64.1",
-		"@unocss/reset": "^0.64.1",
-		"eslint": "^9.15.0",
+		"eslint": "^9.17.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.46.0",
-		"globals": "^15.12.0",
-		"prettier": "^3.4.1",
+		"eslint-plugin-svelte": "^2.46.1",
+		"globals": "^15.14.0",
+		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.2",
 		"proper-tags": "^2.0.2",
-		"svelte": "^5.2.9",
-		"svelte-check": "^4.1.0",
+		"svelte": "^5.15.0",
+		"svelte-check": "^4.1.1",
 		"typescript": "^5.7.2",
-		"typescript-eslint": "^8.16.0",
-		"unocss": "^0.64.1",
-		"vite": "^6.0.1"
+		"typescript-eslint": "^8.18.1",
+		"vite": "^6.0.5"
 	},
 	"type": "module",
 	"dependencies": {
 		"@fontsource-variable/inter": "^5.1.0",
 		"@fontsource/inter": "^5.1.0",
-		"@iconify/svelte": "^4.0.2",
+		"@iconify/svelte": "^4.1.0",
 		"@poppanator/sveltekit-svg": "^5.0.0",
-		"@speed-highlight/core": "^1.2.6",
+		"@speed-highlight/core": "^1.2.7",
 		"@tailwindcss/postcss": "4.0.0-alpha.31",
-		"@tailwindcss/vite": "4.0.0-alpha.31",
-		"@types/chroma-js": "^2.4.4",
+		"@tailwindcss/vite": "4.0.0-beta.8",
+		"@types/chroma-js": "^2.4.5",
 		"@types/markdown-it": "^14.1.2",
 		"@types/markdown-it-attrs": "^4.1.3",
 		"@types/markdown-it-footnote": "^3.0.4",
 		"@types/prismjs": "^1.26.5",
 		"chroma-js": "^3.1.2",
 		"embla-carousel-svelte": "^8.5.1",
-		"highlight.js": "^11.10.0",
-		"iconify-icon": "^2.1.0",
+		"highlight.js": "^11.11.0",
+		"iconify-icon": "^2.2.0",
 		"markdown-it": "^14.1.0",
-		"markdown-it-attrs": "^4.2.0",
+		"markdown-it-attrs": "^4.3.0",
 		"markdown-it-footnote": "^4.0.0",
-		"marked": "^15.0.2",
+		"marked": "^15.0.4",
 		"mdsvex": "^0.12.3",
-		"open-props": "^1.7.7",
+		"open-props": "^1.7.8",
 		"pdf-lib": "^1.17.1",
-		"pocketbase": "^0.22.0",
+		"pocketbase": "^0.24.0",
+		"prettier-plugin-tailwindcss": "^0.6.9",
 		"prismjs": "^1.29.0",
 		"radash": "^12.1.0",
 		"remark-attr": "^0.11.1",
-		"remark-footnotes": "^2",
+		"remark-footnotes": "2",
 		"remark-gfm": "^4.0.0",
 		"remark-toc": "^9.0.0",
-		"tailwindcss": "4.0.0-alpha.31",
+		"tailwindcss": "4.0.0-beta.8",
 		"temporal-polyfill": "^0.2.5",
 		"yaml": "^2.6.1"
 	}
