--- a/src/routes/recipes/data/tofu-bolognese.yaml
+++ b/src/routes/recipes/data/tofu-bolognese.yaml
@@ -1,26 +1,24 @@
 name: Tofu Bolognese
 ingredients:
-  For the main sauce:
-    - 250g extra firm tofu
-    - 1.5 tbsp dark soy sauce (or tamari if gluten free)
-    - 3 tbsp olive oil (or any neutral oil)
-    - 1 onion, peeled and finely diced
-    - 1 carrot, peeled and finely diced
-    - 1 stick celery, finely diced
-    - 1 clove garlic, finely minced or crushed
-    - 2 tbsp tomato paste
-    - 400g can chopped/diced/crushed tomatoes
-    - 130ml red wine (optional)
-    - 1 stock cube
-    - 1 bay leaf
-    - 2 tsp flaky sea salt
-    - 1/2 tsp ground black pepper
-    - 1 tsp sugar
-    - 100ml soy milk (or any)
-  For serving:
-    - 440g pasta (spaghetti recommended)
-    - Fresh basil
-    - Vegan Parmesan
+  - 250g extra firm tofu
+  - 1.5 tbsp dark soy sauce (or tamari if gluten free)
+  - 3 tbsp olive oil (or any neutral oil)
+  - 1 onion, peeled and finely diced
+  - 1 carrot, peeled and finely diced
+  - 1 stick celery, finely diced
+  - 1 clove garlic, finely minced or crushed
+  - 2 tbsp tomato paste
+  - 400g can chopped/diced/crushed tomatoes
+  - 130ml red wine (optional)
+  - 1 stock cube
+  - 1 bay leaf
+  - 2 tsp flaky sea salt
+  - 1/2 tsp ground black pepper
+  - 1 tsp sugar
+  - 100ml soy milk (or any milk)
+  - 440g pasta (spaghetti recommended)
+  - Fresh basil
+  - Vegan Parmesan
 steps:
   - Drain and pat dry the tofu, then shred using the coarse holes of a box grater into a medium bowl.
   - Heat 1 tbsp olive oil in a large non-stick frying pan over medium heat. Fry shredded tofu for 5 minutes until lightly browned, stirring often.
