--- a/src/routes/recipes/data/tuna-patties.yaml
+++ b/src/routes/recipes/data/tuna-patties.yaml
@@ -1,22 +1,19 @@
 name: Tuna Patties
 ingredients:
-  For the patties:
-    - 2 (5 to 6-ounce) cans tuna
-    - 2 teaspoons Dijon mustard
-    - 1/2 cup white bread, torn into small pieces
-    - 1 teaspoon lemon zest
-    - 1 tablespoon lemon juice
-    - 1 tablespoon water, or liquid from the cans of tuna
-    - 2 tablespoons chopped fresh parsley
-    - 2 tablespoons chopped fresh chives, green onions, or shallots
-    - Salt and freshly ground black pepper, to taste
-    - Crystal or Tabasco hot sauce, to taste
-    - 1 raw egg
-  For cooking:
-    - 2 tablespoons extra virgin olive oil
-    - 1/2 teaspoon butter
-  For serving (optional):
-    - Lemon wedges
+  - 2 (5 to 6-ounce) cans tuna
+  - 2 teaspoons Dijon mustard
+  - 1/2 cup white bread, torn into small pieces
+  - 1 teaspoon lemon zest
+  - 1 tablespoon lemon juice
+  - 1 tablespoon water, or liquid from the cans of tuna
+  - 2 tablespoons chopped fresh parsley
+  - 2 tablespoons chopped fresh chives, green onions, or shallots
+  - Salt and freshly ground black pepper, to taste
+  - Crystal or Tabasco hot sauce, to taste
+  - 1 raw egg
+  - 2 tablespoons extra virgin olive oil
+  - 1/2 teaspoon butter
+  - Lemon wedges (optional)
 steps:
   - Drain the liquid from the tuna cans. If you are using tuna packed in water, reserve a tablespoon of the tuna water, and add a teaspoon of olive oil to the tuna mixture in the next step.
   - In a medium bowl, combine the tuna, mustard, torn white bread, lemon zest, lemon juice, water, parsley, chives, and hot sauce. Sprinkle on some salt and freshly ground black pepper. Taste the mixture before adding the egg to see if it needs more seasoning to your taste. Mix in the egg.
