--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "sexycta",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --open",
 		"build": "vite build",
 		"preview": "vite build && vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -39,6 +39,7 @@
 		"@notionhq/client": "^2.2.16",
 		"@poppanator/sveltekit-svg": "^5.0.0",
 		"@speed-highlight/core": "^1.2.7",
+		"@sveltejs/enhanced-img": "^0.6.0",
 		"@tailwindcss/postcss": "4.0.5",
 		"@tailwindcss/vite": "4.0.5",
 		"@types/chroma-js": "^3.1.1",
@@ -65,6 +66,8 @@
 		"remark-footnotes": "^2.0.0",
 		"remark-gfm": "^4.0.0",
 		"remark-toc": "^9.0.0",
+		"remult": "^3.0.2",
+		"svelte-virtual-list": "^3.0.1",
 		"tailwindcss": "4.0.5",
 		"temporal-polyfill": "^0.2.5",
 		"yaml": "^2.7.0"
