--- a/package.json
+++ b/package.json
@@ -12,64 +12,64 @@
 		"db": "./db/pocketbase serve"
 	},
 	"devDependencies": {
-		"@fontsource/fira-mono": "^5.1.1",
+		"@fontsource/fira-mono": "^5.2.6",
 		"@svelte-put/inline-svg": "4.0.1",
-		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/kit": "^2.17.1",
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@sveltejs/adapter-auto": "^6.0.1",
+		"@sveltejs/kit": "^2.22.2",
+		"@sveltejs/vite-plugin-svelte": "^5.1.0",
 		"@types/eslint": "^9.6.1",
-		"eslint": "^9.20.0",
-		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-svelte": "^2.46.1",
-		"globals": "^15.14.0",
-		"prettier": "^3.5.0",
-		"prettier-plugin-svelte": "^3.3.3",
+		"eslint": "^9.29.0",
+		"eslint-config-prettier": "^10.1.5",
+		"eslint-plugin-svelte": "^3.10.1",
+		"globals": "^16.2.0",
+		"prettier": "^3.6.2",
+		"prettier-plugin-svelte": "^3.4.0",
 		"proper-tags": "^2.0.2",
-		"svelte": "^5.19.9",
-		"svelte-check": "^4.1.4",
-		"typescript": "^5.7.3",
-		"typescript-eslint": "^8.23.0",
-		"vite": "^6.1.0"
+		"svelte": "^5.34.8",
+		"svelte-check": "^4.2.2",
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.35.0",
+		"vite": "^7.0.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource-variable/inter": "^5.1.1",
-		"@fontsource/inter": "^5.1.1",
-		"@iconify/svelte": "^4.2.0",
-		"@notionhq/client": "^2.2.16",
-		"@poppanator/sveltekit-svg": "^5.0.0",
+		"@fontsource-variable/inter": "^5.2.6",
+		"@fontsource/inter": "^5.2.6",
+		"@iconify/svelte": "^5.0.0",
+		"@notionhq/client": "^3.1.3",
+		"@poppanator/sveltekit-svg": "^5.0.1",
 		"@speed-highlight/core": "^1.2.7",
-		"@sveltejs/enhanced-img": "^0.6.0",
-		"@tailwindcss/postcss": "4.0.5",
-		"@tailwindcss/vite": "4.0.5",
+		"@sveltejs/enhanced-img": "^0.6.1",
+		"@tailwindcss/postcss": "4.1.11",
+		"@tailwindcss/vite": "4.1.11",
 		"@types/chroma-js": "^3.1.1",
 		"@types/markdown-it": "^14.1.2",
 		"@types/markdown-it-attrs": "^4.1.3",
 		"@types/markdown-it-footnote": "^3.0.4",
 		"@types/prismjs": "^1.26.5",
 		"chroma-js": "^3.1.2",
-		"embla-carousel-svelte": "^8.5.2",
+		"embla-carousel-svelte": "^8.6.0",
 		"highlight.js": "^11.11.1",
-		"iconify-icon": "^2.3.0",
+		"iconify-icon": "^3.0.0",
 		"markdown-it": "^14.1.0",
 		"markdown-it-attrs": "^4.3.1",
 		"markdown-it-footnote": "^4.0.0",
-		"marked": "^15.0.7",
-		"mdsvex": "^0.12.3",
-		"open-props": "^1.7.12",
+		"marked": "^16.0.0",
+		"mdsvex": "0.12.3",
+		"open-props": "^1.7.15",
 		"pdf-lib": "^1.17.1",
-		"pocketbase": "^0.25.1",
-		"prettier-plugin-tailwindcss": "^0.6.11",
-		"prismjs": "^1.29.0",
-		"radash": "^12.1.0",
+		"pocketbase": "^0.26.1",
+		"prettier-plugin-tailwindcss": "^0.6.13",
+		"prismjs": "^1.30.0",
+		"radash": "^12.1.1",
 		"remark-attr": "^0.11.1",
-		"remark-footnotes": "^2.0.0",
-		"remark-gfm": "^4.0.0",
+		"remark-footnotes": "^5.0.0",
+		"remark-gfm": "^4.0.1",
 		"remark-toc": "^9.0.0",
-		"remult": "^3.0.2",
+		"remult": "^3.0.5",
 		"svelte-virtual-list": "^3.0.1",
-		"tailwindcss": "4.0.5",
-		"temporal-polyfill": "^0.2.5",
-		"yaml": "^2.7.0"
+		"tailwindcss": "4.1.11",
+		"temporal-polyfill": "^0.3.0",
+		"yaml": "^2.8.0"
 	}
 }
