--- a/src/routes/recipes/data/traditional-bolognese.yaml
+++ b/src/routes/recipes/data/traditional-bolognese.yaml
@@ -2,7 +2,7 @@ name: Traditional Bolognese sauce
 ingredients:
   - 1lb ground beef
   - 150g sliced pancetta
-  - 1/2 onion (60g), finely chopped
+  - 1/2 onion (60g), **finely chopped**
   - 1 medium carrot (60g), finely chopped
   - 1 celery stalk (60g), finely chopped
   - ½ cup of red or white wine
