--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
 		"remult": "^3.0.5",
 		"tailwindcss": "4.1.11",
 		"temporal-polyfill": "^0.3.0",
+		"uuid": "^11.1.0",
+		"xlsx": "^0.18.5",
 		"yaml": "^2.8.0"
 	}
 }
