--- a/package.json
+++ b/package.json
@@ -14,32 +14,33 @@
 	"devDependencies": {
 		"@fontsource/fira-mono": "^5.2.6",
 		"@svelte-put/inline-svg": "4.0.1",
-		"@sveltejs/adapter-auto": "^6.0.1",
-		"@sveltejs/kit": "^2.22.2",
-		"@sveltejs/vite-plugin-svelte": "^5.1.0",
+		"@sveltejs/adapter-auto": "^6.1.0",
+		"@sveltejs/kit": "^2.28.0",
+		"@sveltejs/vite-plugin-svelte": "^6.1.1",
 		"@types/eslint": "^9.6.1",
-		"eslint": "^9.29.0",
-		"eslint-config-prettier": "^10.1.5",
-		"eslint-plugin-svelte": "^3.10.1",
-		"globals": "^16.2.0",
+		"eslint": "^9.33.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-svelte": "^3.11.0",
+		"globals": "^16.3.0",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"proper-tags": "^2.0.2",
-		"svelte": "^5.34.8",
-		"svelte-check": "^4.2.2",
-		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.35.0",
-		"vite": "^7.0.0"
+		"svelte": "^5.38.1",
+		"svelte-check": "^4.3.1",
+		"typescript": "^5.9.2",
+		"typescript-eslint": "^8.39.1",
+		"vite": "^7.1.2"
 	},
 	"type": "module",
 	"dependencies": {
 		"@fontsource-variable/inter": "^5.2.6",
 		"@fontsource/inter": "^5.2.6",
-		"@iconify/svelte": "^5.0.0",
-		"@notionhq/client": "^3.1.3",
+		"@iconify/svelte": "^5.0.1",
+		"@milkdown/crepe": "^7.15.3",
+		"@notionhq/client": "^4.0.1",
 		"@poppanator/sveltekit-svg": "^5.0.1",
 		"@speed-highlight/core": "^1.2.7",
-		"@sveltejs/enhanced-img": "^0.6.1",
+		"@sveltejs/enhanced-img": "^0.8.0",
 		"@tailwindcss/postcss": "4.1.11",
 		"@tailwindcss/vite": "4.1.11",
 		"@types/chroma-js": "^3.1.1",
@@ -54,23 +55,23 @@
 		"markdown-it": "^14.1.0",
 		"markdown-it-attrs": "^4.3.1",
 		"markdown-it-footnote": "^4.0.0",
-		"marked": "^16.0.0",
+		"marked": "^16.1.2",
 		"mdsvex": "0.12.3",
-		"open-props": "^1.7.15",
+		"open-props": "^1.7.16",
 		"pdf-lib": "^1.17.1",
-		"pocketbase": "^0.26.1",
-		"prettier-plugin-tailwindcss": "^0.6.13",
+		"pocketbase": "^0.26.2",
+		"prettier-plugin-tailwindcss": "^0.6.14",
 		"prismjs": "^1.30.0",
 		"radash": "^12.1.1",
 		"remark-attr": "^0.11.1",
 		"remark-footnotes": "^5.0.0",
 		"remark-gfm": "^4.0.1",
 		"remark-toc": "^9.0.0",
-		"remult": "^3.0.5",
+		"remult": "^3.1.2",
 		"tailwindcss": "4.1.11",
 		"temporal-polyfill": "^0.3.0",
 		"uuid": "^11.1.0",
 		"xlsx": "^0.18.5",
-		"yaml": "^2.8.0"
+		"yaml": "^2.8.1"
 	}
 }
