--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
 		"@tailwindcss/postcss": "4.1.11",
 		"@tailwindcss/vite": "4.1.11",
 		"@types/chroma-js": "^3.1.1",
+		"@types/culori": "^4.0.1",
 		"@types/markdown-it": "^14.1.2",
 		"@types/markdown-it-attrs": "^4.1.3",
 		"@types/markdown-it-footnote": "^3.0.4",
 		"@types/prismjs": "^1.26.5",
 		"chroma-js": "^3.1.2",
+		"culori": "^4.0.2",
 		"embla-carousel-svelte": "^8.6.0",
 		"highlight.js": "^11.11.1",
 		"iconify-icon": "^3.0.0",
